Auth with Supabase and refactoring
Fixed i18n ally issues, changed component names to comply with conventions

--- a/lang/en.json
+++ b/lang/en.json
@@ -5,7 +5,10 @@
   },
   "navigation": {
     "home": "Home",
-    "about": "About"
+    "about": "About",
+    "restricted": "Secret",
+    "login": "Log In with Github",
+    "logout": "Log Out"
   },
   "header": {
     "title": "Nuxt 3 + Tailwind SaaS Template",
